--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
     "gsap": "^3.13.0",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-image-zoomer": "^2.4.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
