--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@barba/core": "^2.10.3",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.17",
     "vue": "^3.5.18",
     "vue-image-zoomer": "^2.4.4"
   },
